--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "server for is client",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "start": "webpack-dev-server --mode development --hot --open --port $PORT",
+    "build": "npm i -dev && webpack --mode production",
+    "heroku-postbuild": "npm build"
   },
   "repository": {
     "type": "git",
