--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "netmask": "^2.0.2",
-    "nodemailer": "^6.5.0",
-    "nodemailer-mailgun-transport": "^2.0.3"
+    "netmask": "^2.0.2"
   }
 }
